# PCSC2017_Group14

./: .gitignore  CMakeLists.txt  DoxyFile  README.md  ReadMe.txt  test1.txt
Doc/html/: _approximation_8hpp.html  _approximation_8hpp_source.html  _config_8h_source.html  _data_fitting_8h.html  _data_interpolation_8cpp.html  _data_interpolation_8h.html  _data_interpolation_8h_source.html  _fuction_approx_8h.html  _interact__main_8cpp.html  _new__main_8cpp.html  _points_8hpp_source.html  _solution_8h.html  _solution_8h_source.html  _test_empty_config_8cpp.html  _test_function_approx_8cpp.html  class_data_fitting-members.html  class_data_interpolation-members.html  class_error_coma_type.html  class_error_data_type-members.html  globals.html  (+21 more)
Readme/: ReadMe.aux  ReadMe.tex
code/: Approximation.cpp  Approximation.hpp  CMakeLists.txt  Config.cpp  Config.h  CreateScenarios.cpp  DataFitting.cpp  DataFitting.h  DataInterpolation.cpp  DataInterpolation.h  Doxyfile  Error.hpp  FuctionApprox.cpp  FuctionApprox.h  FunctionApprox.cpp  FunctionApprox.h  InputClass.cpp  Interact_main.cpp  New_main.cpp  Points.cpp  Points.hpp  ReadFile.cpp  ReadFile.h  ReadInput.cpp  ReadInput.h  ReadPointCoord.cpp  ReadPointCoord.h  Solution.cpp  Solution.h  TestEmptyConfig.cpp  TestFunctionApprox.cpp  Test_Fitting.cpp  Test_Interpolation.cpp  Test_PieceWise.cpp  Test_PieceWiseCont.cpp  Testing.cpp  Testing.h  functions.cpp  functions.h  leastsquares.cpp  (+9 more)
html/: _approximation_8cpp.html  _approximation_8hpp.html  _approximation_8hpp_source.html  _config_8cpp.html  _config_8h.html  _create_scenarios_8cpp.html  _data_fitting_8cpp.html  _data_fitting_8h_source.html  _error_8hpp.html  _error_8hpp_source.html  _fuction_approx_8cpp.html  _fuction_approx_8h_source.html  _function_approx_8cpp.html  _function_approx_8h.html  _function_approx_8h_source.html  _interact__main_8cpp.html  _points_8cpp.html  _points_8hpp.html  _points_8hpp_source.html  _read_point_coord_8cpp.html  _read_point_coord_8h.html  _read_point_coord_8h_source.html  _solution_8cpp.html  _test___fitting_8cpp.html  _test___interpolation_8cpp.html  _test___piece_wise_8cpp.html  _test___piece_wise_cont_8cpp.html  _test_empty_config_8cpp.html  _test_function_approx_8cpp.html  annotated.html  class_approximation-members.html  class_approximation.html  class_config-members.html  class_config.html  class_data_fitting.html  class_data_interpolation.html  class_error_coma_type-members.html  class_error_coma_type.html  class_error_data_type-members.html  class_error_data_type.html  (+38 more)
(+65 files in other folders)
